<resources>
    <string name="app_name">Dictioniary</string>
    <string name="title_home">Home</string>
    <string name="title_translate">Translate</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_profile">Profile</string>
    <string name="title_explore">Explore</string>
    <string name="title_exercise">Exercise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example">Example:</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="example_username">john.doe@gmail.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm\nPassword</string>
    <string name="login">Login</string>
    <string name="create_account">Do not have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="example_full_name">John Doe</string>
    <string name="edit_profile">Edit profile</string>
    <string name="sign_out">Sign out</string>
    <string name="reset_password">Reset password</string>
    <string name="ok">OK</string>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="level">Level</string>
    <string name="level_example">Beginner</string>
    <string name="occupation">Occupation</string>
    <string name="occupation_example">Business</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile_title">Edit your profile</string>
    <string name="add_to_word_list">Add to word list</string>
    <string name="my_word_list">My word list</string>
    <string name="new_word_list">New word list</string>
    <string name="word_list_name_example">Word list name</string>
    <string name="cambridge_word_lists">Cambridge word lists</string>
    <string name="create">Create</string>
    <string name="welcome">Welcome</string>
    <string name="community_word_list">Community word list</string>
    <string name="search_result">Search Result</string>
    <string name="search_for_word">Search for word</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
</resources>