<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePasswordActivity"

    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/change_password"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/ac_change_password_current_password_text_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginBottom="50dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ac_change_password_current_password_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/current_password"

        app:endIconDrawable="@drawable/ic_visibility_on_24"
        app:endIconMode="custom"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="200dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_change_password_current_password_text_input"
            android:inputType="textWebPassword"

            android:layout_width="325dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ac_change_password_new_password_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/new_password"

        app:endIconDrawable="@drawable/ic_visibility_on_24"
        app:endIconMode="custom"

        app:layout_constraintTop_toBottomOf="@id/ac_change_password_current_password_text_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_change_password_new_password_text_input"
            android:inputType="textWebPassword"

            android:layout_width="325dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ac_change_password_confirm_password_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/confirm_password"

        app:endIconDrawable="@drawable/ic_visibility_on_24"
        app:endIconMode="custom"

        app:layout_constraintTop_toBottomOf="@id/ac_change_password_new_password_text_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_change_password_confirm_password_text_input"
            android:inputType="textWebPassword"

            android:layout_width="325dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ac_change_password_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/ok"
        android:textSize="17sp"

        app:layout_constraintTop_toBottomOf="@id/ac_change_password_confirm_password_text_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ac_change_password_cancel_button"

        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/ac_change_password_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/cancel"
        android:textSize="17sp"
        android:backgroundTint="@color/danger"

        app:layout_constraintTop_toBottomOf="@id/ac_change_password_confirm_password_text_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ac_change_password_confirm_button"

        android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>