<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:gravity="center"

    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAllCaps="true"


        app:layout_constraintBottom_toTopOf="@id/ac_login_username_text_input_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ac_login_username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:startIconDrawable="@drawable/ic_person_24"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="250dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_login_username_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ac_login_password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_lock_24"
        app:endIconDrawable="@drawable/ic_visibility_on_24"
        app:endIconMode="custom"

        app:layout_constraintTop_toBottomOf="@id/ac_login_username_text_input_layout"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_login_password_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textWebPassword"

            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ac_login_login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:text="@string/login"
        android:textAllCaps="true"
        android:textSize="17sp"

        app:layout_constraintTop_toBottomOf="@id/ac_login_forgot_password_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/ac_login_create_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/create_account"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"

        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/ac_login_login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/ac_login_forgot_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textAlignment="center"

        app:layout_constraintTop_toBottomOf="@id/ac_login_password_text_input_layout"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>