<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <TextView
        android:id="@+id/fr_choose_word_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/add_to_word_list"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/fr_choose_word_list_add_new_word_list_button"
        />

    <Button
        android:id="@+id/fr_choose_word_list_add_new_word_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/new_word_list"
        android:textSize="15sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fr_choose_word_list_word_list_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fr_choose_word_list_add_new_word_list_button"

        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/fr_choose_word_list_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/cancel"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"

        app:layout_constraintTop_toBottomOf="@id/fr_choose_word_list_word_list_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>