<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAllCaps="true"


        app:layout_constraintBottom_toTopOf="@id/ac_register_username_text_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ac_register_username_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:startIconDrawable="@drawable/ic_email_24"
        android:hint="@string/username"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="150dp"
    >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_register_username_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:maxLines="1"
            android:autofillHints="emailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ac_register_password_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_lock_24"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_visibility_on_24"

        app:layout_constraintTop_toBottomOf="@id/ac_register_username_text_layout"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_register_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="textWebPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ac_register_confirm_password_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/confirm_password"
        app:startIconDrawable="@drawable/ic_lock_24"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_visibility_on_24"

        app:layout_constraintTop_toBottomOf="@id/ac_register_password_text_layout"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_register_confirm_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="textWebPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ac_register_full_name_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/full_name"
        app:startIconDrawable="@drawable/ic_person_24"

        app:layout_constraintTop_toBottomOf="@id/ac_register_confirm_password_text_layout"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ac_register_full_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:maxLines="1"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/ac_register_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/register"
        android:textSize="20sp"


        app:layout_constraintTop_toBottomOf="@+id/ac_register_full_name_text_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>