<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:orientation="vertical"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/bg_rounded_top"

        android:padding="20dp">

        <TextView
            android:id="@+id/fr_home_welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/welcome"
            android:textSize="15sp"
            android:textAllCaps="true"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            android:layout_marginStart="40dp"
            />

        <TextView
            android:id="@+id/fr_home_user_full_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/example_full_name"
            android:textSize="27sp"
            android:textStyle="bold|italic"

            app:layout_constraintLeft_toLeftOf="@id/fr_home_welcome_title"
            app:layout_constraintTop_toBottomOf="@+id/fr_home_welcome_title"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_my_wordList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/my_word_list"
            android:textSize="22sp"
            android:textStyle="italic|bold"

            app:layout_constraintTop_toBottomOf="@+id/fr_home_user_full_name_text_view"
            app:layout_constraintLeft_toLeftOf="@id/fr_home_my_wordlist_section_linear_layout"
            android:layout_marginTop="80dp"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fr_home_user_image_view"
            android:layout_width="60dp"
            android:layout_height="60dp"

            android:src="@drawable/avatar"
            android:scaleType="centerCrop"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"

            app:layout_constraintTop_toTopOf="@id/fr_home_welcome_title"
            app:layout_constraintBottom_toBottomOf="@id/fr_home_user_full_name_text_view"
            app:layout_constraintRight_toRightOf="parent"

            android:layout_marginEnd="40dp"/>

        <LinearLayout
            android:id="@+id/fr_home_my_wordlist_section_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_corners"
            style="@style/Theme.Material3.Dark.Dialog.Alert"
            android:gravity="center"

            android:orientation="vertical"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_my_wordList"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fr_home_user_wordlist_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

            <Button
                android:id="@+id/fr_home_create_wordlist_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_word_list"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>